another warning suppress via Pom